--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.compose import ColumnTransformer \n",
-    "from sklearn.ensemble import RandomForestRegressor"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "0eb2cb63",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "58d8b494",
    "metadata": {},
    "outputs": [],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "165add48",
    "metadata": {},
    "outputs": [],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "e4e2c088",
    "metadata": {},
    "outputs": [],
@@ -81,398 +82,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "be9a70d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv('test.csv.zip')"
+    "y_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d6858ede",
+   "execution_count": null,
+   "id": "d902be1d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>IsHoliday_x</th>\n",
-       "      <th>Temperature</th>\n",
-       "      <th>Fuel_Price</th>\n",
-       "      <th>CPI</th>\n",
-       "      <th>Unemployment</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Store_1</th>\n",
-       "      <th>Store_2</th>\n",
-       "      <th>Store_3</th>\n",
-       "      <th>Store_4</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Dept_98</th>\n",
-       "      <th>Dept_99</th>\n",
-       "      <th>Type_A</th>\n",
-       "      <th>Type_B</th>\n",
-       "      <th>Type_C</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Week</th>\n",
-       "      <th>Day</th>\n",
-       "      <th>Week_till_xmas</th>\n",
-       "      <th>Year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.963798</td>\n",
-       "      <td>-1.720834</td>\n",
-       "      <td>1.018774</td>\n",
-       "      <td>0.078201</td>\n",
-       "      <td>0.239209</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.371945</td>\n",
-       "      <td>-1.471661</td>\n",
-       "      <td>-1.459704</td>\n",
-       "      <td>-0.119608</td>\n",
-       "      <td>-1.215487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.169783</td>\n",
-       "      <td>-1.773177</td>\n",
-       "      <td>1.022498</td>\n",
-       "      <td>0.078201</td>\n",
-       "      <td>0.239209</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.371945</td>\n",
-       "      <td>-1.400999</td>\n",
-       "      <td>-1.389147</td>\n",
-       "      <td>-0.119608</td>\n",
-       "      <td>-1.215487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.092810</td>\n",
-       "      <td>-1.847330</td>\n",
-       "      <td>1.023697</td>\n",
-       "      <td>0.078201</td>\n",
-       "      <td>0.239209</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.371945</td>\n",
-       "      <td>-1.330337</td>\n",
-       "      <td>-1.318590</td>\n",
-       "      <td>-0.119608</td>\n",
-       "      <td>-1.215487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.729625</td>\n",
-       "      <td>-1.744825</td>\n",
-       "      <td>1.024476</td>\n",
-       "      <td>0.078201</td>\n",
-       "      <td>0.239209</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.371945</td>\n",
-       "      <td>-1.259675</td>\n",
-       "      <td>-1.248034</td>\n",
-       "      <td>-0.119608</td>\n",
-       "      <td>-1.215487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.736672</td>\n",
-       "      <td>-1.605243</td>\n",
-       "      <td>1.025255</td>\n",
-       "      <td>0.078201</td>\n",
-       "      <td>0.239209</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.063609</td>\n",
-       "      <td>-1.189013</td>\n",
-       "      <td>-1.177477</td>\n",
-       "      <td>-0.119608</td>\n",
-       "      <td>-1.215487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421565</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.259647</td>\n",
-       "      <td>1.387032</td>\n",
-       "      <td>0.531461</td>\n",
-       "      <td>0.388404</td>\n",
-       "      <td>-0.303489</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.786408</td>\n",
-       "      <td>0.930848</td>\n",
-       "      <td>0.919063</td>\n",
-       "      <td>-0.119609</td>\n",
-       "      <td>1.294317</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421566</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.260189</td>\n",
-       "      <td>1.360860</td>\n",
-       "      <td>0.535467</td>\n",
-       "      <td>0.379281</td>\n",
-       "      <td>-0.303489</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.094744</td>\n",
-       "      <td>1.001510</td>\n",
-       "      <td>0.989620</td>\n",
-       "      <td>-0.119609</td>\n",
-       "      <td>1.294317</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421567</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.304645</td>\n",
-       "      <td>1.393575</td>\n",
-       "      <td>0.539472</td>\n",
-       "      <td>0.379281</td>\n",
-       "      <td>-0.303489</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.094744</td>\n",
-       "      <td>1.072172</td>\n",
-       "      <td>1.060177</td>\n",
-       "      <td>-0.119609</td>\n",
-       "      <td>1.294317</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421568</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.196231</td>\n",
-       "      <td>1.325965</td>\n",
-       "      <td>0.539564</td>\n",
-       "      <td>0.379281</td>\n",
-       "      <td>-0.303489</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.094744</td>\n",
-       "      <td>1.142834</td>\n",
-       "      <td>1.130733</td>\n",
-       "      <td>-0.119609</td>\n",
-       "      <td>1.294317</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421569</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.067219</td>\n",
-       "      <td>1.136222</td>\n",
-       "      <td>0.539003</td>\n",
-       "      <td>0.379281</td>\n",
-       "      <td>-0.303489</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.094744</td>\n",
-       "      <td>1.213496</td>\n",
-       "      <td>1.201290</td>\n",
-       "      <td>-0.119609</td>\n",
-       "      <td>1.294317</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>421570 rows × 140 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        IsHoliday_x  Temperature  Fuel_Price       CPI  Unemployment  \\\n",
-       "0                 0    -0.963798   -1.720834  1.018774      0.078201   \n",
-       "1                 1    -1.169783   -1.773177  1.022498      0.078201   \n",
-       "2                 0    -1.092810   -1.847330  1.023697      0.078201   \n",
-       "3                 0    -0.729625   -1.744825  1.024476      0.078201   \n",
-       "4                 0    -0.736672   -1.605243  1.025255      0.078201   \n",
-       "...             ...          ...         ...       ...           ...   \n",
-       "421565            0     0.259647    1.387032  0.531461      0.388404   \n",
-       "421566            0     0.260189    1.360860  0.535467      0.379281   \n",
-       "421567            0    -0.304645    1.393575  0.539472      0.379281   \n",
-       "421568            0    -0.196231    1.325965  0.539564      0.379281   \n",
-       "421569            0    -0.067219    1.136222  0.539003      0.379281   \n",
-       "\n",
-       "            Size  Store_1  Store_2  Store_3  Store_4  ...  Dept_98  Dept_99  \\\n",
-       "0       0.239209        1        0        0        0  ...        0        0   \n",
-       "1       0.239209        1        0        0        0  ...        0        0   \n",
-       "2       0.239209        1        0        0        0  ...        0        0   \n",
-       "3       0.239209        1        0        0        0  ...        0        0   \n",
-       "4       0.239209        1        0        0        0  ...        0        0   \n",
-       "...          ...      ...      ...      ...      ...  ...      ...      ...   \n",
-       "421565 -0.303489        0        0        0        0  ...        1        0   \n",
-       "421566 -0.303489        0        0        0        0  ...        1        0   \n",
-       "421567 -0.303489        0        0        0        0  ...        1        0   \n",
-       "421568 -0.303489        0        0        0        0  ...        1        0   \n",
-       "421569 -0.303489        0        0        0        0  ...        1        0   \n",
-       "\n",
-       "        Type_A  Type_B  Type_C     Month      Week       Day  Week_till_xmas  \\\n",
-       "0            1       0       0 -1.371945 -1.471661 -1.459704       -0.119608   \n",
-       "1            1       0       0 -1.371945 -1.400999 -1.389147       -0.119608   \n",
-       "2            1       0       0 -1.371945 -1.330337 -1.318590       -0.119608   \n",
-       "3            1       0       0 -1.371945 -1.259675 -1.248034       -0.119608   \n",
-       "4            1       0       0 -1.063609 -1.189013 -1.177477       -0.119608   \n",
-       "...        ...     ...     ...       ...       ...       ...             ...   \n",
-       "421565       0       1       0  0.786408  0.930848  0.919063       -0.119609   \n",
-       "421566       0       1       0  1.094744  1.001510  0.989620       -0.119609   \n",
-       "421567       0       1       0  1.094744  1.072172  1.060177       -0.119609   \n",
-       "421568       0       1       0  1.094744  1.142834  1.130733       -0.119609   \n",
-       "421569       0       1       0  1.094744  1.213496  1.201290       -0.119609   \n",
-       "\n",
-       "            Year  \n",
-       "0      -1.215487  \n",
-       "1      -1.215487  \n",
-       "2      -1.215487  \n",
-       "3      -1.215487  \n",
-       "4      -1.215487  \n",
-       "...          ...  \n",
-       "421565  1.294317  \n",
-       "421566  1.294317  \n",
-       "421567  1.294317  \n",
-       "421568  1.294317  \n",
-       "421569  1.294317  \n",
-       "\n",
-       "[421570 rows x 140 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train"
+    "X_train.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e591fec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_dev.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8169f713",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_dev.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "630e362d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2304ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a8ff0e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e509d52f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d780166",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09b419be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08eaa28c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2da10cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e570d17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8ff830d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
